--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* App.css */
+.App {
+  font-family: Arial, sans-serif;
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 20px;
+  color: #222222;
+}
+.container {
+  max-width: 1440px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  margin: 0;
+}
+.product {
+  max-height: 731px;
+}
+.product h2 {
+  font-size: larger;
+  font-weight: 300;
+}
+.product p.price {
+  border-top: 1px solid #f6f6f7;
+  border-bottom: 1px solid #f6f6f7;
+  padding: 5px 0;
+  font-weight: 600;
+}
+
+.product p.description {
+  font-size: smaller;
+  color: #888888;
+  font-weight: 200;
+}
+
+.add-to-cart-btn {
+  margin-top: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.add-to-cart-btn:hover {
+  background-color: #0056b3;
+}
+
+.error-message {
+  color: red;
+}
+.mini-cart {
+  margin: 10px 0;
+}
+.mini-cart p {
+  font-size: small;
+  background: #f6f6f7;
+  text-align: right;
+  color: #888888;
+  padding: 6px;
+  font-weight: 100;
+  margin-bottom: 0px;
+}
+
+@media (max-width: 768px) {
 }
