--- a/src/index.css
+++ b/src/index.css
@@ -32,19 +32,33 @@ h1 {
   color: #888888;
   font-weight: 200;
 }
+.product span.size {
+  text-transform: uppercase;
+  font-size: smaller;
+  color: #888888;
+}
+.product span.size em {
+  color: #c90000;
+}
 
 .add-to-cart-btn {
   margin-top: 10px;
-  background-color: #007bff;
-  color: #fff;
+  background-color: #ffffff;
+  color: #000000;
   border: none;
   padding: 10px 20px;
   cursor: pointer;
+  text-transform: uppercase;
   transition: background-color 0.2s;
+  border: 2px solid #000;
+  font-weight: 400;
+  font-size: small;
 }
 
 .add-to-cart-btn:hover {
-  background-color: #0056b3;
+  background-color: #000000;
+  color: #ffffff;
+  border: 2px solid #000;
 }
 
 .error-message {
